# adxl355

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  TODO.md
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  hil.yml  release.yml
c/: CMakeLists.txt
c/cmake/: adxl355-config.cmake.in
c/examples/: CMakeLists.txt  linux_spi.c  linux_spi_transfer.c  linux_spi_transfer.h
c/include/adxl355/: adxl355.h  adxl355_registers.h  adxl355_version.h
c/src/: adxl355.c
c/tests/: CMakeLists.txt  test_adxl355.c  test_linux_spi_transfer.c  test_mock_bus.c  test_mock_bus.h
cmake/smoke/c/: CMakeLists.txt  main.c
cmake/smoke/cpp/: CMakeLists.txt  main.cpp
cpp/: CMakeLists.txt
cpp/cmake/: adxl355-cpp-config.cmake.in
cpp/include/adxl355/: adxl355.hpp
cpp/tests/: test_adxl355_cpp.cpp
docs/: SOLUTIONS_fix_validate_transport_re.md  architecture.md  calibration.md  hardware-testing.md  publishing.md  register-map.md  releasing.md  testing.md  versioning.md
docs/security/: node-dev-dependency-risk.md  supply-chain.md
go/adxl355/: device.go  device_test.go  errors.go  registers.go  state_contract_test.go  transport.go  transport_contract_test.go
node/: README.md  package-lock.json  package.json
node/scripts/: check-package.mjs
node/src/: device.ts  errors.ts  index.ts  registers.ts  transport.ts
node/test/: deviceMock.test.ts  transportContract.test.ts
python/: MANIFEST.in  README.md  pyproject.toml
python/examples/: basic_read.py  calibrate.py
python/src/adxl355/: __init__.py  constants.py  device.py  errors.py  registers.py  testing.py  transport.py
python/src/adxl355/adapters/: __init__.py  smbus2.py  spidev.py
python/tests/: test_config.py  test_device_mock.py  test_parse_raw.py  test_registers.py  test_spidev_adapter.py  test_state_contract.py  test_transport_contract.py
rust/: Cargo.toml  README.md
rust/examples/: basic.rs
rust/src/: device.rs  error.rs  hal.rs  lib.rs  registers.rs
rust/tests/: hal_spi.rs  mock_bus.rs  state_contract.rs  transport_contract.rs
scripts/: finalize_release_sbom.py  hil_runner.py  prepare_sbom_input.py  release_artifacts.py  release_preflight.py  smoke_cmake_packages.sh  verify_vectors.py  versioning.py
scripts/tests/: __init__.py  test_ci_quality_gates.py  test_ci_vector_gate.py  test_finalize_release_sbom.py  test_hil_runner.py  test_hil_workflow.py  test_package_metadata.py  test_prepare_sbom_input.py  test_public_documentation.py  test_release_artifacts.py  test_release_preflight.py  test_release_workflow.py  test_supply_chain.py  test_verify_vectors.py  test_versioning.py
spec/: adxl355.constants.yaml  adxl355.registers.yaml  hil_report.schema.json  test_vectors.json  transport_contract.json  validate_spec.py
