[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adxl355"
version = "0.1.0"
description = "Cross-platform ADXL355 accelerometer driver"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Oğuzhan Aslan" },
]
keywords = ["adxl355", "accelerometer", "sensor", "spi", "i2c", "embedded", "raspberry-pi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[project.urls]
Homepage = "https://github.com/oaslananka/adxl355"
Repository = "https://github.com/oaslananka/adxl355"
Issues = "https://github.com/oaslananka/adxl355/issues"

[project.optional-dependencies]
spi = ["spidev"]
i2c = ["smbus2"]
dev = ["pytest>=7", "ruff>=0.1", "mypy>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "N", "I"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.setuptools.package-data]
adxl355 = ["py.typed"]
